--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="20">
         <tr>
 
-            <td><img src="images/Ahmed.png" alt="ahmed profile pictures" height="150" width="150"></td>
+            <td><img src="https://raw.githubusercontent.com/AhmedO5/vs/main/Images/Ahmed.png" alt="ahmed profile pictures" height="150" width="150"></td>
             <td><h2>Ahmed Morshed</h2>
             <p>Founder and ceo of <b><a href="https://chat.openai.com/chat">Two partys</a></b></p>
             <p> This is a website that will help your life in so manny ways it can solve any thing you can name the only limits my website has are the limits that you give it</p></td>
