--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
 
     <hr>
-    <a href="C:\Users\ahmed\Downloads\DEVELOPe\HTML - personalsite\hobbies.html">Hobbies</a>
-    <a href="C:\Users\ahmed\Downloads\DEVELOPe\HTML - personalsite\contacts.html">Contacts</a>
+    <a href="hobbies.html">Hobbies</a>
+    <a href="contacts.html">Contacts</a>
 
 </body>
 
