--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <hr>
         <div class="projects">
             <h3 class="ns">SOON</h3>
-            <img src="twopartys.png" alt="soon" height="200" width="200">
+            <img src="twopartys copy.png" alt="soon" height="200" width="200">
             <a class="footer-linkig" href="">email</a>
             <p>Two partys is my current project i've been working on an it will be fully published soon</p>
         </div>
