--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="skills">
                 <h3>My Skills.</h3>
                 <div class="skill-row">
-                    <img class="webdiv" src="images/Skill.webp" alt="skills profile-picture" height="200" width="200">
+                    <img class="webdiv" src="Skill.webp" alt="skills profile-picture" height="200" width="200">
                     <h3>design and development</h3>
                     <p>If you have any idea that needs a website contact me ill do it for free im trying to challenge my self. <br><br>I started to learn to code when i was 13 years old. because i wanted to understand how the digital world works. You might think one of my best skills is front-end web development, however thats not true Im much better with backend. I have been using python since i was 12...</p>
                 </div>
