--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 
                 <div class="skill-row">
                     
-                    <img class="code-img" src="images/skill.webp" alt="skills profile-picture" height="200" width="200">
+                    <img class="code-img" src="images/Skill.webp" alt="skills profile-picture" height="200" width="200">
                     <h3>design and development</h3>
                     <p class="discription-code">If you have any idea that needs a website contact me ill do it for free im trying to challenge my self.</p>
                 </div>
